threads are set to inactive after 10 minutes. the 'create-thread' button is no longer invisible. if a post is made with empty text, it no longer says 'undefined'.

--- a/src/app/component/make-thread/make-thread.component.css
+++ b/src/app/component/make-thread/make-thread.component.css
@@ -45,4 +45,5 @@ textarea {
 #completeThread {
     width: 40%;
     margin: 10px auto;
+    background-color: orange;
 }
